# LSDC

./: .gitignore  CMakeLists.txt  COPYING.txt  LSDC.sln  LSDC.vcproj  LSDC.vcxproj  LSDCLib.vcproj  LSDCLib.vcxproj  Makefile.inc  Makefile.lib  Makefile.lsdc  Makefile.test  README.md  Test.vcproj  Test.vcxproj  build_t.py
doc/: NET.txt  Serialization.txt
libsrc/: BufStream.cpp  BufStream.h  Class.cpp  Class.h  Consts.cpp  Consts.h  Database.cpp  Database.h  DotNET.cpp  Enums.cpp  Enums.h  FileWalker.cpp  FileWalker.h  FunctorGeneration.h  HeaderProcessor.cpp  HeaderProcessor.h  ItemListsGenerator.h  Macro.cpp  Macro.h  Method.cpp  Method.h  MethodArg.cpp  MethodArg.h  MethodBinding.h  OpcodeGeneration.cpp  OpcodeGeneration.h  Package.cpp  Package.h  Property.cpp  Property.h  Utils.cpp  Utils.h
libsrc/DotNETAddons/: marshal_array.h  marshal_enums.h  marshal_export_symbols.h  serialize_array.h
src/: LSDC.cpp  test.cpp
test/: enum.h
